fix iframe on mobile issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -475,6 +475,11 @@ pre code {
 custom changes
 */
 
+iframe {
+  width: 100%;
+  height: 100%;
+}
+
 section {
   display: flex;
   flex-direction: row;
